<resources>
    <string name="app_name" translatable="false">GoalsHabitTracker</string>

    <string name="default_web_client_id">516713855411-89krektn4i8o8qvk1hg4eaji2llngljo.apps.googleusercontent.com</string>
    <string name="facebook_app_id" translatable="false">644698875233495</string>
    <string name="facebook_client_token" translatable="false">80f137c7a35362c580be7e67acd3ad7f</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb644698875233495</string>

    <string name="empty" />
    <string name="welcome_msg">Welcome to Goals Habit Tracker</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email_pass_auth_title">Email/Password Authentication</string>
    <string name="socials_auth_title">Social Authentication</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="create_account">Create account</string>
    <string name="home">Home</string>
    <string name="achievements">Achievements</string>
    <string name="logout">Logout</string>
    <string name="add_habit">Add Habit</string>
    <string name="edit_habit">Edit Habit</string>
    <string name="name_is_required">Name is required</string>
    <string name="category_is_required">Category is required</string>
    <string name="done">Done</string>
    <string name="profile">Profile</string>
    <string name="select_language">Select Language</string>
    <string name="settings">Settings</string>
    <string name="change_language">Change Language</string>
    <string name="english">English</string>
    <string name="macedonian">Macedonian</string>
    <string name="german">German</string>
    <string name="completed">"Completed: "</string>
    <string name="times_week">" times/week"</string>
    <string name="habit_name">Habit Name</string>
    <string name="description_optional">Description (Optional)</string>
    <string name="category">Category</string>
    <string name="target_frequency_times_per_week">Target Frequency (times per week)</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="no_habits_yet">No habits yet.\nTap + to add your first habit!</string>
    <string name="facebook_authentication_failed">"Facebook authentication failed: "</string>
    <string name="please_enter_email_and_password">Please enter email and password</string>
    <string name="authentication_failed">"Authentication failed: "</string>
    <string name="anonymous_authentication_failed">Anonymous authentication failed</string>
    <string name="google_authentication_failed">Google authentication failed</string>
    <string name="password_should_be_at_least_6_characters">Password should be at least 6 characters</string>
    <string name="error_updating_habit">Error updating habit</string>
    <string name="error_loading_habits">Error loading habits</string>
    <string name="error_adding_habit">Error adding habit</string>
    <string name="error_deleting_habit">Error deleting habit</string>
    <string name="delete_habit">Delete Habit</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete \"</string>
    <string name="delete">Delete</string>
    <string name="guest_user">Anonymous User</string>
    <string name="goals_list">Goals List</string>
    <string name="completed_goals">Completed Goals</string>
</resources>