<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_teal"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_24">

        <ImageButton
            android:id="@+id/languageButton"
            android:layout_width="@dimen/margin_32"
            android:layout_height="@dimen/margin_32"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/change_language"
            android:padding="@dimen/padding_12"
            android:src="@drawable/ic_language"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/navy" />

        <ImageView
            android:id="@+id/appIcon"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/app_icon_height"
            android:layout_marginTop="@dimen/margin_100"
            android:layout_marginBottom="@dimen/margin_16"
            android:contentDescription="@string/empty"
            android:src="@drawable/habit_tracker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcomeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_40"
            android:gravity="center"
            android:text="@string/welcome_msg"
            android:textColor="@color/navy"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appIcon" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_32"
            android:layout_marginTop="@dimen/margin_50"
            android:padding="@dimen/padding_12"
            android:text="@string/login"
            android:textSize="@dimen/button_text_size"
            app:backgroundTint="@color/teal_200"
            app:cornerRadius="@dimen/button_corner_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcomeTitle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_32"
            android:layout_marginTop="@dimen/margin_10"
            android:padding="@dimen/padding_12"
            android:text="@string/register"
            android:textSize="@dimen/button_text_size"
            app:backgroundTint="@color/teal_700"
            app:cornerRadius="@dimen/button_corner_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>